<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Activities.RulesActivity">

    <android.support.constraint.ConstraintLayout
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Activities.QuestionActivity">
        <ImageView
                android:layout_width="240dp"
                android:layout_height="247dp" app:srcCompat="@drawable/pelo" android:id="@+id/imageView18"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rule7" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:layout_width="80dp"
                android:layout_height="56dp" app:srcCompat="@drawable/logo"
                android:id="@+id/imageView11" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/pour_combien_logo" android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"/>
        <TextView
        android:text="@string/rule_7"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:id="@+id/rule7"
        android:textColor="@color/colorPrimaryDark" android:textSize="20sp" android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/rule6"
        android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
            android:text="@string/rule_6"
            android:layout_width="349dp"
            android:layout_height="54dp"
            android:id="@+id/rule6"
            android:textColor="@color/pale_mauve" android:textSize="20sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rule5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.448"
            android:textAlignment="center"/>
        <TextView
            android:text="@string/rule_5"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:id="@+id/rule5"
            android:textColor="@color/colorPrimaryDark" android:textSize="20sp" android:textAlignment="center"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/rule4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
            android:text="@string/rule_3"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:id="@+id/rule3"
            android:textColor="@color/colorPrimaryDark" android:textSize="20sp" android:textAlignment="center"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/rule2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/rule_4"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/rule4"
                android:textColor="@color/pale_mauve" android:textSize="20sp" android:textAlignment="center"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/rule3"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
            android:text="@string/rule_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rule2"
            android:textColor="@color/pale_mauve" android:textSize="20sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rule1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:text="@string/rule_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ruleTitle" android:textSize="40sp"
            android:textColor="@color/pale_mauve" android:fontFamily="@font/intro_inline"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent" android:textAllCaps="false"
            app:layout_constraintHorizontal_bias="0.496"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="46dp" app:srcCompat="@drawable/home2"
                android:id="@+id/homebutton10"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
                android:contentDescription="@string/home_button"/>
        <TextView
            android:text="@string/rule_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rule1"
            android:textColor="@color/colorPrimaryDark" android:textSize="20sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ruleTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>