<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.DefiActivity"
        android:background="@drawable/background">

    <android.support.constraint.ConstraintLayout
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Activities.DefiActivity">

        <ImageView
                android:layout_width="114dp"
                android:layout_height="78dp" app:srcCompat="@drawable/logo"
                android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/pour_combien_logo"/>
        <Button
                android:text="@string/next_step"
                android:layout_width="143dp"
                android:layout_height="60dp"
                android:id="@+id/buttonNext" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/pale_mauve" android:background="@color/colorPrimary"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageChallenge"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/challengeText" android:textSize="40sp"
                android:textColor="@color/pale_mauve" android:fontFamily="@font/fresh_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666" android:text="@string/default_challenge_order"
                android:textAlignment="center" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="128dp"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="46dp" app:srcCompat="@drawable/home2"
                android:id="@+id/homebutton5" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/home_button"/>
        <ImageView
                android:layout_width="313dp"
                android:layout_height="229dp" app:srcCompat="@drawable/pomme"
                android:id="@+id/imageChallenge" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/challengeText" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/challenge_image"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>