<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ModeActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="80dp"
                android:layout_height="56dp" app:srcCompat="@drawable/logo"
                android:id="@+id/logoPourCombien" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/pour_combien_logo" android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="46dp" app:srcCompat="@drawable/home2"
                android:id="@+id/homebutton" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:contentDescription="@string/home_button"/>
        <Button
                android:text="@string/text_silly"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:id="@+id/sillybutton" android:background="@drawable/circle_button"
                android:fontFamily="@font/fun_sized"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.494"
                android:textSize="45sp"
                android:textColor="@color/colorPrimary" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageChooseMode"/>
        <Button
                android:text="@string/text_hard"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:id="@+id/hard_button" android:background="@drawable/circle_button"
                android:fontFamily="@font/fun_sized" android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintTop_toBottomOf="@+id/sillybutton" android:textSize="45sp"
                android:textColor="@color/colorPrimary"/>
        <Button
                android:text="@string/text_alcoholic"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:id="@+id/alcoholobutton" android:background="@drawable/circle_button"
                android:fontFamily="@font/fun_sized" android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintTop_toBottomOf="@+id/hard_button" android:textSize="45sp"
                android:textColor="@color/colorPrimary"/>
        <ImageView
                android:layout_width="334dp"
                android:layout_height="245dp" app:srcCompat="@drawable/modes2" android:id="@+id/imageChooseMode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoPourCombien" android:layout_marginTop="8dp"
                android:contentDescription="@string/choose_mode_image"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
