<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MatchActivity" android:id="@+id/next2"
        android:background="@drawable/background">

        <ImageView
                android:layout_width="80dp"
                android:layout_height="56dp" app:srcCompat="@drawable/logo"
                android:id="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/pour_combien_logo" android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="46dp" app:srcCompat="@drawable/home2"
                android:id="@+id/homebutton6"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
                android:contentDescription="@string/home_button"/>
        <TextView
                android:text="@string/match_declaration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="50sp"
                android:textColor="@color/pale_mauve" android:fontFamily="@font/intro_inline"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:textAlignment="center"
                android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent" android:textAllCaps="false"
                app:layout_constraintHorizontal_bias="0.496"/>
        <TextView
                android:text="@string/default_match_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/matchOrder" android:textSize="25sp"
                android:fontFamily="@font/fresh_marker" android:textColor="@color/pale_mauve"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                android:textAlignment="center"/>
        <ImageView
                android:layout_width="247dp"
                android:layout_height="247dp" app:srcCompat="@drawable/match"
                android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:contentDescription="@string/match_image"/>
</android.support.constraint.ConstraintLayout>