<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.NotMatchActivity"
        android:background="@drawable/background" android:id="@+id/next">


    <ImageView
            android:layout_width="80dp"
            android:layout_height="56dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView9" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/pour_combien_logo" android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="48dp"
            android:layout_height="46dp" app:srcCompat="@drawable/home2"
            android:id="@+id/homebutton7"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            android:contentDescription="@string/home_button"/>
    <TextView
            android:text="@string/no_match_declaration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="50sp"
            android:textColor="@color/pale_mauve" android:fontFamily="@font/intro_inline"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:layout_marginTop="112dp" app:layout_constraintTop_toTopOf="parent" android:textAllCaps="false"
            app:layout_constraintHorizontal_bias="1.0"/>
    <ImageView
            android:layout_width="342dp"
            android:layout_height="183dp" app:srcCompat="@drawable/bab"
            android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:contentDescription="@string/no_match_image"/>
    <TextView
            android:text="@string/default_player2_name"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:id="@+id/namePlayerField" android:textSize="25sp"
            android:fontFamily="@font/fresh_marker" android:textColor="@color/easter_purple"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <TextView
            android:text=", venge toi !"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/revengeField" android:textSize="25sp"
            android:fontFamily="@font/fresh_marker" android:textColor="@color/easter_purple"
            app:layout_constraintStart_toEndOf="@+id/namePlayerField" android:layout_marginStart="9dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

    <Button
            android:text="@string/next_step"
            android:layout_width="143dp"
            android:layout_height="60dp"
            android:id="@+id/buttonNext"
            android:textColor="@color/pale_mauve" android:background="@color/colorPrimary"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/namePlayerField" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>