<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.SplashScreen" android:id="@+id/SplashScreen"
        android:background="@color/black">
    <ImageView
            android:layout_width="323dp"
            android:layout_height="212dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logoPourCombien"
            android:contentDescription="@string/pour_combien_logo"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="293dp"
            android:layout_height="0dp"
            android:id="@+id/introductionText"
            android:text="@string/text_splash_screen"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="36sp"
            android:fontFamily="@font/fresh_marker"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/authors_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authorsNames" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/grey" android:textAlignment="center"
            android:textStyle="italic" android:fontFamily="@font/intro_inline"/>
    <TextView
            android:text="@string/tajj_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tajjText"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/fresh_marker"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logoPourCombien" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>