<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.VersusActivity"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" android:id="@+id/Layout">

    <TextView
            android:text="@string/default_player1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-15"
            android:textSize="50sp"
            android:fontFamily="@font/fun_sized" android:textColor="@color/pale_mauve" android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:id="@+id/player1Field" android:visibility="visible"/>
    <TextView
            android:text="@string/default_player2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-15"
            android:textSize="50sp"
            android:fontFamily="@font/fun_sized" android:textColor="@color/pale_mauve"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:id="@+id/player2Field"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginBottom="90dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="256dp"
            android:layout_height="219dp" app:srcCompat="@drawable/versus"
            android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/player1Field" app:layout_constraintHorizontal_bias="0.516"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/versus_image"/>

</android.support.constraint.ConstraintLayout>

